@@ -1,3 +1,9 @@
+Mon Jun  6 17:10:50 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/openssl/ossl_cipher.c (ossl_cipher_free): Use EVP_CIPHER_CTX_free()
+	  to free EVP_CIPHER_CTX allocated by EVP_CIPHER_CTX_new().
+	  [ruby-core:75225] [Feature #12324]
+
 Mon Jun  6 13:37:08 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
 
 	* string.c Change rb_str_casemap to use encoding primitive
